# apm-agent-ocaml

./: .dockerignore  .gitignore  .ocamlformat  LICENSE  README.md  docker-compose.yml  dune-project  elastic-apm-async-client.opam  elastic-apm-async-reporter.opam  elastic-apm-async-reporter.opam.template  elastic-apm-logs-reporter.opam  elastic-apm-lwt-client.opam  elastic-apm-lwt-reporter.opam  elastic-apm-opium-middleware.opam  elastic-apm-rock.opam  elastic-apm.opam  ocaml-base.Dockerfile  postgres_init.sql  shell.nix
.github/workflows/: build-client.yml  main.yml  test-in-nix.yml
async_client/: client.ml  client.mli  dune
async_reporter/: dune  reporter.ml  reporter.mli
codegen/: dune  system_info.ml  system_info.mli
core/: client_intf.ml  context.ml  context.mli  dune  duration.ml  duration.mli  error.ml  error.mli  id.ml  id.mli  id_intf.ml  metadata.ml  metadata.mli  metrics.ml  metrics.mli  reporter_intf.ml  request.ml  request.mli  span.ml  span.mli  system_info.ml  system_info.mli  timestamp.ml  timestamp.mli  transaction.ml  transaction.mli
demo/: dune  main.ml
example/: dune  main.ml
example/1-hello-opium/: Dockerfile  demo_hello_world.opam  dune  dune-project  hello.ml
example/2-database-ocaml/: Dockerfile  db.ml  db.mli  demo_database.opam  dune  dune-project  hello.ml
example/2-hello-dream/: dune  hello.ml
example/3-polyglot-services/: README.md
example/3-polyglot-services/ocaml/: Dockerfile  dune  dune-project  hello.ml
example/3-polyglot-services/python/: Dockerfile  app.py  requirements.txt
logs_reporter/: dune  reporter.ml  reporter.mli
lwt_client/: client.ml  client.mli  dune
lwt_reporter/lib/: dune  reporter.ml  reporter.mli
nix/: default.nix  opam-selection_4_12.nix  opam-selection_4_13.nix
opium_middleware/: apm.ml  apm.mli  dune
rock_middleware/: apm.ml  dune
src/: apm.ml  comms.ml  context.ml  dune  error.ml  http.ml  id.ml  message.ml  message_queue.ml  metadata.ml  timestamp.ml  trace.ml  transaction.ml  utils.ml
test/: dune  json_serialization.ml  logs_reporter_output.ml
