(library
 (name elastic_apm_core)
 (preprocess
  (pps ppx_yojson_conv))
 (public_name elastic-apm.core)
 (libraries dune-build-info mtime.clock.os ptime.clock.os unix yojson))

(rule
 (targets elastic_apm_generated_sysinfo.ml)
 (action
  (with-stdout-to
   %{targets}
   (run ../codegen/system_info.exe))))
