(executable
 (name hello)
 (public_name demo_database)
 (libraries
  base
  opium
  pgx_lwt_unix
  pgx_value_core
  fmt.tty
  logs.fmt
  elastic-apm-opium-middleware)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv)))

(env
 (default
  (flags (:standard)))
 (static
  (flags
   (:standard -ccopt -static))))
